--- a/formgram-cg.tex
+++ b/formgram-cg.tex
@@ -240,7 +240,7 @@ np/\gruen<3>{n} & n/\gruen<2>{n}   & \gruen<2>{n}   & (s\bs np)/\gruen<4>{np} & 
 &&&&&&\multicolumn{3}{c@{}}{\visible<7->{\forwardapp}}\\
 &&&&&&\multicolumn{3}{c@{}}{\visible<7->{(s\bs np)\bs \gruen<8>{(s\bs np)}}}\\
 &&&\multicolumn{6}{c@{}}{\visible<8->{\backwardapp}}\\
-&&&\multicolumn{6}{c@{}}{\visible<8->{(s\bs \gruen<9>{np})}}\\
+&&&\multicolumn{6}{c@{}}{\visible<8->{s\bs \gruen<9>{np}}}\\
 \multicolumn{9}{@{}c@{}}{\visible<9->{\backwardapp}}\\
 \multicolumn{9}{@{}c@{}}{\visible<9->{s}}\\
 }}
