--- a/formgram-gb2.tex
+++ b/formgram-gb2.tex
@@ -530,7 +530,7 @@ which speaks for the fact that this structure reflects the base order.
 \frame{
 \frametitle{Sometimes SOV is the only option}
 
-Sometimes SOV is the only option \citep[\page 370--371]{Hoehle2018Projektionsstufen}:
+Sometimes SOV is the only option \citep[\page 370--371]{HoehleProjektionsstufen}:
 \eal
 \ex[]{
 \gll weil sie das Stück heute ur-auf-führen\\
