--- a/formgram-introduction.tex
+++ b/formgram-introduction.tex
@@ -91,7 +91,7 @@ died before 650 AD, from \emph{Vakyapadiya}, found by Gabriele Knoll)
 \item Literature: \citew[Chapter~1]{MuellerLehrbuch} or \citew[Chapter~1]{MuellerGTBuch}
 \medskip
 
-\item signs: form-meaning pairs \citep{Saussure16a}
+\item signs: form-meaning pairs \citep{Saussure16a-de}
 \pause
 \item words, word groups, sentences
 \pause
