--- a/styles/de-date.sty
+++ b/styles/de-date.sty
@@ -39,3 +39,10 @@
 \def\submitted{eingereicht}
 
 \def\underRevision{Revise and resubmit}
+
+\def\publishedAs{Veröffentlicht als}
+\def\republishedAs{Wiederveröffentlicht als\xspace}
+
+
+\newcommand{\translationOf}{Übersetzung von}
+\newcommand{\translatedBy}{Übersetzt von\xspace}
