--- a/styles/article-ex.sty
+++ b/styles/article-ex.sty
@@ -2,8 +2,15 @@
 
 % \mex{1} refers to the next eample \mex{2} to the one after this and \mex{0} to the previous one.
 
-% THis just produces text output.
+% This just produces text output.
 \newcommand{\mex}[1]{\the\numexpr\c@equation+#1\relax}
+
+% This does not work since we also point to outside of footnotes
+% \newcommand{\mex}[1]{\if@noftnote%
+%  \the\numexpr\c@equation+#1\relax
+% \else
+%  \the\numexpr\c@fnx+#1\relax
+% \fi}
 
 % This introduces labels which makes hyperlinks work so that proofreading is easier.
 % \newcommand{\mex}[1]{\ref{ex-\the\numexpr\c@equation+#1}\relax}
