--- a/styles/makros.2e.sty
+++ b/styles/makros.2e.sty
@@ -435,7 +435,7 @@ Abbildung~\ref{#1}\vpageref[]{#1} und Abbildung~\ref{#2} \vpageref{#2}%
 % http://tex.stackexchange.com/questions/207259/passing-a-command-as-an-argument
 \newcommand\drawtrace{\raisebox{0.2ex}{\_}\rule{0cm}{0.7em}}
 
-\newcommand\trace{\usebox\tracebox\xspace}
+\newcommand\trace{\usebox\tracebox}
 \newsavebox\tracebox
 \AtBeginDocument{
   \savebox\tracebox{\drawtrace}
