--- a/formgram-cxg.tex
+++ b/formgram-cxg.tex
@@ -49,6 +49,7 @@
 \item Radical Construction Grammar \citep{Croft2001a}
 \item Embodied Construction Grammar \citep{BC2005a}
 \item Fluid Construction Grammar \citep{SDB2006a-u}
+\item Sign-Based Construction Grammar (HPSG-Variante) \citep{Sag2012a}
 \end{itemize}
 \pause
 \item Phänomenbeschreibungen zielen meistens auf phrasale Muster ab.
@@ -56,6 +57,7 @@
       \Zb \citew{Croft2001a,Goldberg2003a}
 \pause
 \item Deutschsprachiger Sammelband zum Thema: \citew{FS2006a-ed}.
+\item Vergleich HPSG/CxG und generelle Diskussion, was CxG ist: \citew{MuellerCxG}
 \end{itemize}
 
 }
@@ -99,7 +101,7 @@ Das ist ein fundamentaler Unterschied zur GB, LFG und HPSG.
 \citew{SDB2006a-u,vanTrijp2011a,Steels2013a}.
 \item Eine durch Ideen der CxG beeinflusste Arbeit ist das Buch von Jean-Pierre Koenig (damals Berkeley)
   \citeyearpar{Koenig99a} im Rahmen der HPSG.
-\item Fillmore und Kay arbeiten eng mit Sag zusammen,\\
+\item Fillmore und Kay haben eng mit Sag zusammengearbeitet,\\
   woraus sich eine HPSG"=Variante ergeben hat,\\
   die Sign"=Based Construction Grammar genannt wird \citep{Sag2012a}.
 \end{itemize}
