--- a/formgram-minimalism.tex
+++ b/formgram-minimalism.tex
@@ -743,13 +743,13 @@ bilden.
 
 
 %% \ea
-%% Kennt jeder diesen Mann?
+%% Kennt jeder diesen Roman?
 %% \z
 
 }
 
 \frame{
-\frametitle{Verbstellung: \emph{Kennt jeder diesen Mann?}}
+\frametitle{Verbstellung: \emph{Kennt jeder diesen Roman?}}
 
 
 \scalebox{.7}{
@@ -767,7 +767,7 @@ bilden.
           [\phonliste{ jeder }]
           [\littlevbar
             [VP
-              [DP [\textit{diesen Mann}, roof] ]
+              [DP [\textit{diesen Roman}, roof] ]
               [\phonliste{ kennt }]]
             [\textit{v}
               [\phonliste{ kennt }]
@@ -790,12 +790,12 @@ bilden.
 }
 
 \frame{
-\frametitle{Fernabhängigkeiten \emph{Diesen Mann kennt jeder.}}
+\frametitle{Fernabhängigkeiten \emph{Diesen Roman kennt jeder.}}
 
 \scalebox{.7}{
 \begin{forest}
 [CP
-  [\emph{diesen Mann} {[top] }]
+  [\emph{diesen Roman} {[top] }]
   [\cbar{[\st{\textit{u}top*}]}
     [C
       [T{[\st{Decl*}]}
@@ -809,7 +809,7 @@ bilden.
           [\phonliste{ jeder }]
           [\littlevbar
             [VP
-              [\phonliste{ diesen Mann }{[D]}]
+              [\phonliste{ diesen Roman }{[D]}]
               [\phonliste{ kennt }]]
             [\textit{v}
               [\phonliste{ kennt }]
@@ -917,9 +917,9 @@ weil getanzt wurde
   Umstellungen wie in (\mex{1}b) auslöst:
 \eal
 \ex 
-{}[weil] jeder diesen Mann kennt
+{}[weil] jeder diesen Roman kennt
 \ex 
-{}[weil] diesen Mann jeder kennt
+{}[weil] diesen Roman jeder kennt
 \zl
 \item Diverse Vorschläge in der Literatur mit so genannten funktionalen Projektionen:
 \begin{itemize}
@@ -933,7 +933,7 @@ weil getanzt wurde
 } 
 
 \frame{
-\frametitle{Lokale Umstellung \emph{dass diesen Mann jeder kennt}}
+\frametitle{Lokale Umstellung \emph{dass diesen Roman jeder kennt}}
 
 \scalebox{.8}{
 \begin{forest}
@@ -942,12 +942,12 @@ weil getanzt wurde
       [dass]]
     [TP
         [\vP
-          [\emph{diesen Mann}]
+          [\emph{diesen Roman}]
           [\littlevbar
             [ \emph{jeder}]
             [\littlevbar
                 [VP
-                  [\phonliste{ diesen Mann } {[D]}] 
+                  [\phonliste{ diesen Roman } {[D]}] 
                   [\phonliste{ kennt }]]
                 [\textit{v}
                   [\phonliste{ kennt }]
